--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js"
   },
-  "author": "Anirban Sikder",
+  "author": "mayank",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
